// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Next - Public fields > Next - Public fields (pass) > {
        class X {
          static p = function() { return arguments[0]; }
        }
      }

      {
        class X {
          static t = () => {
            function p() { return arguments[0]; };
            return p;
          }
        }

        let p = X.t();
      } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "body": {
            "body": [
              {
                "computed": false,
                "decorators": [],
                "end": 76,
                "key": {
                  "end": 38,
                  "name": "p",
                  "range": [
                    37,
                    38,
                  ],
                  "start": 37,
                  "type": "Identifier",
                },
                "range": [
                  37,
                  76,
                ],
                "start": 37,
                "static": true,
                "type": "PropertyDefinition",
                "value": {
                  "async": false,
                  "body": {
                    "body": [
                      {
                        "argument": {
                          "computed": true,
                          "end": 73,
                          "object": {
                            "end": 70,
                            "name": "arguments",
                            "range": [
                              61,
                              70,
                            ],
                            "start": 61,
                            "type": "Identifier",
                          },
                          "optional": false,
                          "property": {
                            "end": 72,
                            "range": [
                              71,
                              72,
                            ],
                            "start": 71,
                            "type": "Literal",
                            "value": 0,
                          },
                          "range": [
                            61,
                            73,
                          ],
                          "start": 61,
                          "type": "MemberExpression",
                        },
                        "end": 74,
                        "range": [
                          54,
                          74,
                        ],
                        "start": 54,
                        "type": "ReturnStatement",
                      },
                    ],
                    "end": 76,
                    "range": [
                      52,
                      76,
                    ],
                    "start": 52,
                    "type": "BlockStatement",
                  },
                  "end": 76,
                  "generator": false,
                  "id": null,
                  "params": [],
                  "range": [
                    41,
                    76,
                  ],
                  "start": 41,
                  "type": "FunctionExpression",
                },
              },
            ],
            "end": 86,
            "range": [
              18,
              86,
            ],
            "start": 18,
            "type": "ClassBody",
          },
          "decorators": [],
          "end": 86,
          "id": {
            "end": 17,
            "name": "X",
            "range": [
              16,
              17,
            ],
            "start": 16,
            "type": "Identifier",
          },
          "range": [
            10,
            86,
          ],
          "start": 10,
          "superClass": null,
          "type": "ClassDeclaration",
        },
      ],
      "end": 94,
      "range": [
        0,
        94,
      ],
      "start": 0,
      "type": "BlockStatement",
    },
    {
      "body": [
        {
          "body": {
            "body": [
              {
                "computed": false,
                "decorators": [],
                "end": 235,
                "key": {
                  "end": 140,
                  "name": "t",
                  "range": [
                    139,
                    140,
                  ],
                  "start": 139,
                  "type": "Identifier",
                },
                "range": [
                  139,
                  235,
                ],
                "start": 139,
                "static": true,
                "type": "PropertyDefinition",
                "value": {
                  "async": false,
                  "body": {
                    "body": [
                      {
                        "async": false,
                        "body": {
                          "body": [
                            {
                              "argument": {
                                "computed": true,
                                "end": 197,
                                "object": {
                                  "end": 194,
                                  "name": "arguments",
                                  "range": [
                                    185,
                                    194,
                                  ],
                                  "start": 185,
                                  "type": "Identifier",
                                },
                                "optional": false,
                                "property": {
                                  "end": 196,
                                  "range": [
                                    195,
                                    196,
                                  ],
                                  "start": 195,
                                  "type": "Literal",
                                  "value": 0,
                                },
                                "range": [
                                  185,
                                  197,
                                ],
                                "start": 185,
                                "type": "MemberExpression",
                              },
                              "end": 198,
                              "range": [
                                178,
                                198,
                              ],
                              "start": 178,
                              "type": "ReturnStatement",
                            },
                          ],
                          "end": 200,
                          "range": [
                            176,
                            200,
                          ],
                          "start": 176,
                          "type": "BlockStatement",
                        },
                        "end": 200,
                        "generator": false,
                        "id": {
                          "end": 173,
                          "name": "p",
                          "range": [
                            172,
                            173,
                          ],
                          "start": 172,
                          "type": "Identifier",
                        },
                        "params": [],
                        "range": [
                          163,
                          200,
                        ],
                        "start": 163,
                        "type": "FunctionDeclaration",
                      },
                      {
                        "end": 201,
                        "range": [
                          200,
                          201,
                        ],
                        "start": 200,
                        "type": "EmptyStatement",
                      },
                      {
                        "argument": {
                          "end": 222,
                          "name": "p",
                          "range": [
                            221,
                            222,
                          ],
                          "start": 221,
                          "type": "Identifier",
                        },
                        "end": 223,
                        "range": [
                          214,
                          223,
                        ],
                        "start": 214,
                        "type": "ReturnStatement",
                      },
                    ],
                    "end": 235,
                    "range": [
                      149,
                      235,
                    ],
                    "start": 149,
                    "type": "BlockStatement",
                  },
                  "end": 235,
                  "expression": false,
                  "generator": false,
                  "params": [],
                  "range": [
                    143,
                    235,
                  ],
                  "start": 143,
                  "type": "ArrowFunctionExpression",
                },
              },
            ],
            "end": 245,
            "range": [
              120,
              245,
            ],
            "start": 120,
            "type": "ClassBody",
          },
          "decorators": [],
          "end": 245,
          "id": {
            "end": 119,
            "name": "X",
            "range": [
              118,
              119,
            ],
            "start": 118,
            "type": "Identifier",
          },
          "range": [
            112,
            245,
          ],
          "start": 112,
          "superClass": null,
          "type": "ClassDeclaration",
        },
        {
          "declarations": [
            {
              "end": 268,
              "id": {
                "end": 260,
                "name": "p",
                "range": [
                  259,
                  260,
                ],
                "start": 259,
                "type": "Identifier",
              },
              "init": {
                "arguments": [],
                "callee": {
                  "computed": false,
                  "end": 266,
                  "object": {
                    "end": 264,
                    "name": "X",
                    "range": [
                      263,
                      264,
                    ],
                    "start": 263,
                    "type": "Identifier",
                  },
                  "optional": false,
                  "property": {
                    "end": 266,
                    "name": "t",
                    "range": [
                      265,
                      266,
                    ],
                    "start": 265,
                    "type": "Identifier",
                  },
                  "range": [
                    263,
                    266,
                  ],
                  "start": 263,
                  "type": "MemberExpression",
                },
                "end": 268,
                "optional": false,
                "range": [
                  263,
                  268,
                ],
                "start": 263,
                "type": "CallExpression",
              },
              "range": [
                259,
                268,
              ],
              "start": 259,
              "type": "VariableDeclarator",
            },
          ],
          "end": 269,
          "kind": "let",
          "range": [
            255,
            269,
          ],
          "start": 255,
          "type": "VariableDeclaration",
        },
      ],
      "end": 277,
      "range": [
        102,
        277,
      ],
      "start": 102,
      "type": "BlockStatement",
    },
  ],
  "end": 277,
  "range": [
    0,
    277,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > { class X { static p = function() { return arguments[0]; } } } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "body": {
            "body": [
              {
                "computed": false,
                "decorators": [],
                "end": 58,
                "key": {
                  "end": 20,
                  "name": "p",
                  "range": [
                    19,
                    20,
                  ],
                  "start": 19,
                  "type": "Identifier",
                },
                "range": [
                  19,
                  58,
                ],
                "start": 19,
                "static": true,
                "type": "PropertyDefinition",
                "value": {
                  "async": false,
                  "body": {
                    "body": [
                      {
                        "argument": {
                          "computed": true,
                          "end": 55,
                          "object": {
                            "end": 52,
                            "name": "arguments",
                            "range": [
                              43,
                              52,
                            ],
                            "start": 43,
                            "type": "Identifier",
                          },
                          "optional": false,
                          "property": {
                            "end": 54,
                            "range": [
                              53,
                              54,
                            ],
                            "start": 53,
                            "type": "Literal",
                            "value": 0,
                          },
                          "range": [
                            43,
                            55,
                          ],
                          "start": 43,
                          "type": "MemberExpression",
                        },
                        "end": 56,
                        "range": [
                          36,
                          56,
                        ],
                        "start": 36,
                        "type": "ReturnStatement",
                      },
                    ],
                    "end": 58,
                    "range": [
                      34,
                      58,
                    ],
                    "start": 34,
                    "type": "BlockStatement",
                  },
                  "end": 58,
                  "generator": false,
                  "id": null,
                  "params": [],
                  "range": [
                    23,
                    58,
                  ],
                  "start": 23,
                  "type": "FunctionExpression",
                },
              },
            ],
            "end": 60,
            "range": [
              10,
              60,
            ],
            "start": 10,
            "type": "ClassBody",
          },
          "decorators": [],
          "end": 60,
          "id": {
            "end": 9,
            "name": "X",
            "range": [
              8,
              9,
            ],
            "start": 8,
            "type": "Identifier",
          },
          "range": [
            2,
            60,
          ],
          "start": 2,
          "superClass": null,
          "type": "ClassDeclaration",
        },
      ],
      "end": 62,
      "range": [
        0,
        62,
      ],
      "start": 0,
      "type": "BlockStatement",
    },
  ],
  "end": 62,
  "range": [
    0,
    62,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class A {  ;;;; ;;;;;;'a'; "b"; 'c' = 39;  "d" = 42;;;;;;;  ;;;; } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "end": 26,
            "key": {
              "end": 25,
              "range": [
                22,
                25,
              ],
              "start": 22,
              "type": "Literal",
              "value": "a",
            },
            "range": [
              22,
              26,
            ],
            "start": 22,
            "static": false,
            "type": "PropertyDefinition",
            "value": null,
          },
          {
            "computed": false,
            "decorators": [],
            "end": 31,
            "key": {
              "end": 30,
              "range": [
                27,
                30,
              ],
              "start": 27,
              "type": "Literal",
              "value": "b",
            },
            "range": [
              27,
              31,
            ],
            "start": 27,
            "static": false,
            "type": "PropertyDefinition",
            "value": null,
          },
          {
            "computed": false,
            "decorators": [],
            "end": 41,
            "key": {
              "end": 35,
              "range": [
                32,
                35,
              ],
              "start": 32,
              "type": "Literal",
              "value": "c",
            },
            "range": [
              32,
              41,
            ],
            "start": 32,
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "end": 40,
              "range": [
                38,
                40,
              ],
              "start": 38,
              "type": "Literal",
              "value": 39,
            },
          },
          {
            "computed": false,
            "decorators": [],
            "end": 52,
            "key": {
              "end": 46,
              "range": [
                43,
                46,
              ],
              "start": 43,
              "type": "Literal",
              "value": "d",
            },
            "range": [
              43,
              52,
            ],
            "start": 43,
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "end": 51,
              "range": [
                49,
                51,
              ],
              "start": 49,
              "type": "Literal",
              "value": 42,
            },
          },
        ],
        "end": 66,
        "range": [
          8,
          66,
        ],
        "start": 8,
        "type": "ClassBody",
      },
      "decorators": [],
      "end": 66,
      "id": {
        "end": 7,
        "name": "A",
        "range": [
          6,
          7,
        ],
        "start": 6,
        "type": "Identifier",
      },
      "range": [
        0,
        66,
      ],
      "start": 0,
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "end": 66,
  "range": [
    0,
    66,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class A { ;;;;;;[x] = 42; [10] = "meep"; ["not initialized"];;;;;;; } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": true,
            "decorators": [],
            "end": 25,
            "key": {
              "end": 18,
              "name": "x",
              "range": [
                17,
                18,
              ],
              "start": 17,
              "type": "Identifier",
            },
            "range": [
              16,
              25,
            ],
            "start": 16,
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "end": 24,
              "range": [
                22,
                24,
              ],
              "start": 22,
              "type": "Literal",
              "value": 42,
            },
          },
          {
            "computed": true,
            "decorators": [],
            "end": 40,
            "key": {
              "end": 29,
              "range": [
                27,
                29,
              ],
              "start": 27,
              "type": "Literal",
              "value": 10,
            },
            "range": [
              26,
              40,
            ],
            "start": 26,
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "end": 39,
              "range": [
                33,
                39,
              ],
              "start": 33,
              "type": "Literal",
              "value": "meep",
            },
          },
          {
            "computed": true,
            "decorators": [],
            "end": 61,
            "key": {
              "end": 59,
              "range": [
                42,
                59,
              ],
              "start": 42,
              "type": "Literal",
              "value": "not initialized",
            },
            "range": [
              41,
              61,
            ],
            "start": 41,
            "static": false,
            "type": "PropertyDefinition",
            "value": null,
          },
        ],
        "end": 69,
        "range": [
          8,
          69,
        ],
        "start": 8,
        "type": "ClassBody",
      },
      "decorators": [],
      "end": 69,
      "id": {
        "end": 7,
        "name": "A",
        "range": [
          6,
          7,
        ],
        "start": 6,
        "type": "Identifier",
      },
      "range": [
        0,
        69,
      ],
      "start": 0,
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "end": 69,
  "range": [
    0,
    69,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class A { ['a'] = 0; b; } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": true,
            "decorators": [],
            "end": 20,
            "key": {
              "end": 14,
              "range": [
                11,
                14,
              ],
              "start": 11,
              "type": "Literal",
              "value": "a",
            },
            "range": [
              10,
              20,
            ],
            "start": 10,
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "end": 19,
              "range": [
                18,
                19,
              ],
              "start": 18,
              "type": "Literal",
              "value": 0,
            },
          },
          {
            "computed": false,
            "decorators": [],
            "end": 23,
            "key": {
              "end": 22,
              "name": "b",
              "range": [
                21,
                22,
              ],
              "start": 21,
              "type": "Identifier",
            },
            "range": [
              21,
              23,
            ],
            "start": 21,
            "static": false,
            "type": "PropertyDefinition",
            "value": null,
          },
        ],
        "end": 25,
        "range": [
          8,
          25,
        ],
        "start": 8,
        "type": "ClassBody",
      },
      "decorators": [],
      "end": 25,
      "id": {
        "end": 7,
        "name": "A",
        "range": [
          6,
          7,
        ],
        "start": 6,
        "type": "Identifier",
      },
      "range": [
        0,
        25,
      ],
      "start": 0,
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "end": 25,
  "range": [
    0,
    25,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class A { a = 0; } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "key": {
              "name": "a",
              "type": "Identifier",
            },
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "type": "Literal",
              "value": 0,
            },
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "A",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class A { a = b += c } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "end": 20,
            "key": {
              "end": 11,
              "name": "a",
              "range": [
                10,
                11,
              ],
              "start": 10,
              "type": "Identifier",
            },
            "range": [
              10,
              20,
            ],
            "start": 10,
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "end": 20,
              "left": {
                "end": 15,
                "name": "b",
                "range": [
                  14,
                  15,
                ],
                "start": 14,
                "type": "Identifier",
              },
              "operator": "+=",
              "range": [
                14,
                20,
              ],
              "right": {
                "end": 20,
                "name": "c",
                "range": [
                  19,
                  20,
                ],
                "start": 19,
                "type": "Identifier",
              },
              "start": 14,
              "type": "AssignmentExpression",
            },
          },
        ],
        "end": 22,
        "range": [
          8,
          22,
        ],
        "start": 8,
        "type": "ClassBody",
      },
      "decorators": [],
      "end": 22,
      "id": {
        "end": 7,
        "name": "A",
        "range": [
          6,
          7,
        ],
        "start": 6,
        "type": "Identifier",
      },
      "range": [
        0,
        22,
      ],
      "start": 0,
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "end": 22,
  "range": [
    0,
    22,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class A { a = b = c } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "end": 19,
            "key": {
              "end": 11,
              "name": "a",
              "range": [
                10,
                11,
              ],
              "start": 10,
              "type": "Identifier",
            },
            "range": [
              10,
              19,
            ],
            "start": 10,
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "end": 19,
              "left": {
                "end": 15,
                "name": "b",
                "range": [
                  14,
                  15,
                ],
                "start": 14,
                "type": "Identifier",
              },
              "operator": "=",
              "range": [
                14,
                19,
              ],
              "right": {
                "end": 19,
                "name": "c",
                "range": [
                  18,
                  19,
                ],
                "start": 18,
                "type": "Identifier",
              },
              "start": 14,
              "type": "AssignmentExpression",
            },
          },
        ],
        "end": 21,
        "range": [
          8,
          21,
        ],
        "start": 8,
        "type": "ClassBody",
      },
      "decorators": [],
      "end": 21,
      "id": {
        "end": 7,
        "name": "A",
        "range": [
          6,
          7,
        ],
        "start": 6,
        "type": "Identifier",
      },
      "range": [
        0,
        21,
      ],
      "start": 0,
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "end": 21,
  "range": [
    0,
    21,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class A { foo; } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "end": 14,
            "key": {
              "end": 13,
              "name": "foo",
              "range": [
                10,
                13,
              ],
              "start": 10,
              "type": "Identifier",
            },
            "range": [
              10,
              14,
            ],
            "start": 10,
            "static": false,
            "type": "PropertyDefinition",
            "value": null,
          },
        ],
        "end": 16,
        "range": [
          8,
          16,
        ],
        "start": 8,
        "type": "ClassBody",
      },
      "decorators": [],
      "end": 16,
      "id": {
        "end": 7,
        "name": "A",
        "range": [
          6,
          7,
        ],
        "start": 6,
        "type": "Identifier",
      },
      "range": [
        0,
        16,
      ],
      "start": 0,
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "end": 16,
  "range": [
    0,
    16,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class A { set = get; } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "key": {
              "name": "set",
              "type": "Identifier",
            },
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "name": "get",
              "type": "Identifier",
            },
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "A",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class A { set; } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "end": 14,
            "key": {
              "end": 13,
              "name": "set",
              "range": [
                10,
                13,
              ],
              "start": 10,
              "type": "Identifier",
            },
            "range": [
              10,
              14,
            ],
            "start": 10,
            "static": false,
            "type": "PropertyDefinition",
            "value": null,
          },
        ],
        "end": 16,
        "range": [
          8,
          16,
        ],
        "start": 8,
        "type": "ClassBody",
      },
      "decorators": [],
      "end": 16,
      "id": {
        "end": 7,
        "name": "A",
        "range": [
          6,
          7,
        ],
        "start": 6,
        "type": "Identifier",
      },
      "range": [
        0,
        16,
      ],
      "start": 0,
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "end": 16,
  "range": [
    0,
    16,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class Foo { x = 1; } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "end": 18,
            "key": {
              "end": 13,
              "name": "x",
              "range": [
                12,
                13,
              ],
              "start": 12,
              "type": "Identifier",
            },
            "range": [
              12,
              18,
            ],
            "start": 12,
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "end": 17,
              "range": [
                16,
                17,
              ],
              "start": 16,
              "type": "Literal",
              "value": 1,
            },
          },
        ],
        "end": 20,
        "range": [
          10,
          20,
        ],
        "start": 10,
        "type": "ClassBody",
      },
      "decorators": [],
      "end": 20,
      "id": {
        "end": 9,
        "name": "Foo",
        "range": [
          6,
          9,
        ],
        "start": 6,
        "type": "Identifier",
      },
      "range": [
        0,
        20,
      ],
      "start": 0,
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "end": 20,
  "range": [
    0,
    20,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class Some { render=( )=>{ return null; }} 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "end": 41,
            "key": {
              "end": 19,
              "name": "render",
              "range": [
                13,
                19,
              ],
              "start": 13,
              "type": "Identifier",
            },
            "range": [
              13,
              41,
            ],
            "start": 13,
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "async": false,
              "body": {
                "body": [
                  {
                    "argument": {
                      "end": 38,
                      "range": [
                        34,
                        38,
                      ],
                      "start": 34,
                      "type": "Literal",
                      "value": null,
                    },
                    "end": 39,
                    "range": [
                      27,
                      39,
                    ],
                    "start": 27,
                    "type": "ReturnStatement",
                  },
                ],
                "end": 41,
                "range": [
                  25,
                  41,
                ],
                "start": 25,
                "type": "BlockStatement",
              },
              "end": 41,
              "expression": false,
              "generator": false,
              "params": [],
              "range": [
                20,
                41,
              ],
              "start": 20,
              "type": "ArrowFunctionExpression",
            },
          },
        ],
        "end": 42,
        "range": [
          11,
          42,
        ],
        "start": 11,
        "type": "ClassBody",
      },
      "decorators": [],
      "end": 42,
      "id": {
        "end": 10,
        "name": "Some",
        "range": [
          6,
          10,
        ],
        "start": 6,
        "type": "Identifier",
      },
      "range": [
        0,
        42,
      ],
      "start": 0,
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "end": 42,
  "range": [
    0,
    42,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class Some { render=(a,b)=>{ return null; } } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "key": {
              "name": "render",
              "type": "Identifier",
            },
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "async": false,
              "body": {
                "body": [
                  {
                    "argument": {
                      "type": "Literal",
                      "value": null,
                    },
                    "type": "ReturnStatement",
                  },
                ],
                "type": "BlockStatement",
              },
              "expression": false,
              "generator": false,
              "params": [
                {
                  "name": "a",
                  "type": "Identifier",
                },
                {
                  "name": "b",
                  "type": "Identifier",
                },
              ],
              "type": "ArrowFunctionExpression",
            },
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "Some",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > class X { static p = eval("(function() { return arguments[0]; })(1)"); } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "key": {
              "name": "p",
              "type": "Identifier",
            },
            "static": true,
            "type": "PropertyDefinition",
            "value": {
              "arguments": [
                {
                  "type": "Literal",
                  "value": "(function() { return arguments[0]; })(1)",
                },
              ],
              "callee": {
                "name": "eval",
                "type": "Identifier",
              },
              "optional": false,
              "type": "CallExpression",
            },
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "X",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > const createClass = (k) => class { [k()] = 2 }; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "end": 46,
          "id": {
            "end": 17,
            "name": "createClass",
            "range": [
              6,
              17,
            ],
            "start": 6,
            "type": "Identifier",
          },
          "init": {
            "async": false,
            "body": {
              "body": {
                "body": [
                  {
                    "computed": true,
                    "decorators": [],
                    "end": 44,
                    "key": {
                      "arguments": [],
                      "callee": {
                        "end": 37,
                        "name": "k",
                        "range": [
                          36,
                          37,
                        ],
                        "start": 36,
                        "type": "Identifier",
                      },
                      "end": 39,
                      "optional": false,
                      "range": [
                        36,
                        39,
                      ],
                      "start": 36,
                      "type": "CallExpression",
                    },
                    "range": [
                      35,
                      44,
                    ],
                    "start": 35,
                    "static": false,
                    "type": "PropertyDefinition",
                    "value": {
                      "end": 44,
                      "range": [
                        43,
                        44,
                      ],
                      "start": 43,
                      "type": "Literal",
                      "value": 2,
                    },
                  },
                ],
                "end": 46,
                "range": [
                  33,
                  46,
                ],
                "start": 33,
                "type": "ClassBody",
              },
              "decorators": [],
              "end": 46,
              "id": null,
              "range": [
                27,
                46,
              ],
              "start": 27,
              "superClass": null,
              "type": "ClassExpression",
            },
            "end": 46,
            "expression": true,
            "generator": false,
            "params": [
              {
                "end": 22,
                "name": "k",
                "range": [
                  21,
                  22,
                ],
                "start": 21,
                "type": "Identifier",
              },
            ],
            "range": [
              20,
              46,
            ],
            "start": 20,
            "type": "ArrowFunctionExpression",
          },
          "range": [
            6,
            46,
          ],
          "start": 6,
          "type": "VariableDeclarator",
        },
      ],
      "end": 47,
      "kind": "const",
      "range": [
        0,
        47,
      ],
      "start": 0,
      "type": "VariableDeclaration",
    },
  ],
  "end": 47,
  "range": [
    0,
    47,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Public fields > Next - Public fields (pass) > var C = class { static async #prototype() {} }; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "end": 46,
          "id": {
            "end": 5,
            "name": "C",
            "range": [
              4,
              5,
            ],
            "start": 4,
            "type": "Identifier",
          },
          "init": {
            "body": {
              "body": [
                {
                  "computed": false,
                  "decorators": [],
                  "end": 44,
                  "key": {
                    "end": 39,
                    "name": "prototype",
                    "range": [
                      29,
                      39,
                    ],
                    "start": 29,
                    "type": "PrivateIdentifier",
                  },
                  "kind": "method",
                  "range": [
                    16,
                    44,
                  ],
                  "start": 16,
                  "static": true,
                  "type": "MethodDefinition",
                  "value": {
                    "async": true,
                    "body": {
                      "body": [],
                      "end": 44,
                      "range": [
                        42,
                        44,
                      ],
                      "start": 42,
                      "type": "BlockStatement",
                    },
                    "end": 44,
                    "generator": false,
                    "id": null,
                    "params": [],
                    "range": [
                      39,
                      44,
                    ],
                    "start": 39,
                    "type": "FunctionExpression",
                  },
                },
              ],
              "end": 46,
              "range": [
                14,
                46,
              ],
              "start": 14,
              "type": "ClassBody",
            },
            "decorators": [],
            "end": 46,
            "id": null,
            "range": [
              8,
              46,
            ],
            "start": 8,
            "superClass": null,
            "type": "ClassExpression",
          },
          "range": [
            4,
            46,
          ],
          "start": 4,
          "type": "VariableDeclarator",
        },
      ],
      "end": 47,
      "kind": "var",
      "range": [
        0,
        47,
      ],
      "start": 0,
      "type": "VariableDeclaration",
    },
  ],
  "end": 47,
  "range": [
    0,
    47,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;
